--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 
 <!-- Main Page -->
 <main>
-
+    @@include('./html/_subscribe.html')
 </main>
 @@include('./html/_footer.html')
 @@include('./html/_script.html')
