--- a/src/html/_head.html
+++ b/src/html/_head.html
@@ -8,6 +8,9 @@
     <title> @@title - Название проекта </title>
     <link rel="stylesheet" href="./css/style.min.css">
     <meta name="description" content="@@description">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body class="main__body">
