--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 
 <!-- Main Page -->
 <main>
+    @@include('./html/_blog.html')
     @@include('./html/_subscribe.html')
 </main>
 @@include('./html/_footer.html')
