--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,5 +1,7 @@
+<!--  Footer start -->
 <footer class="footer">
     <div class="wrapper">
+        <!--  Footer top start -->
         <div class="footer-top">
             <ul class="footer-top__list">
                 <li class="footer-top__item">
@@ -60,10 +62,17 @@
                 </li>
             </ul>
         </div>
+        <!--  Footer top end -->
+
+        <!--  Footer bottom start -->
         <div class="footer-bottom">
             <span class="copyright">
                 Copyright © «ВсеСтулья.Ру». Все права защищены.
             </span>
         </div>
+        <!--  Footer bottom end -->
+
+
     </div>
 </footer>
+<!--  Footer end -->
