--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,7 +1,10 @@
+<!--  Header start -->
 <header class="header">
+    <!--  Header top start -->
     <div class="header-top">
         <div class="wrapper">
             <div class="header-top__inner">
+                <!--  Header city start -->
                 <div class="header-top__city">
                     <span>Ваш город:  </span>
                     <div class="header-top__city-content">
@@ -16,6 +19,9 @@
                         </div>
                     </div>
                 </div>
+                <!--  Header city end -->
+
+                <!--  Header manu start -->
                 <nav class="header-top__menu menu">
                     <a href="#" class="header-top__menu-item menu-item">О нас</a>
                     <a href="#" class="header-top__menu-item menu-item">Доставка, оплата, гарантия</a>
@@ -23,9 +29,13 @@
                     <a href="#" class="header-top__menu-item menu-item">Как оплатить заказ онлайн</a>
                     <a href="#" class="header-top__menu-item menu-item">Юридическим лицам</a>
                 </nav>
+                <!--  Header menu end -->
             </div>
         </div>
     </div>
+    <!--  Header top end -->
+
+    <!--  Header content start -->
     <div class="wrapper">
         <div class="header-inner">
             <a href="#" class="header-logo">
@@ -91,8 +101,12 @@
             </div>
         </div>
     </div>
+    <!--  Header content end -->
+
+    <!--  Header bottom start -->
     <div class="header-bottom">
         <div class="wrapper">
+            <!--  Header bottom menu start -->
             <nav class="header-bottom__menu">
                 <div class="header-bottom__item">
                     <a href="#" class="header-bottom__menu-btn">
@@ -127,7 +141,9 @@
                     <a href="#" class="header-bottom__menu-link">Распродажа столов и стульев</a>
                 </div>
             </nav>
+            <!--  Header bottom menu end -->
         </div>
     </div>
-
+    <!--  Header bottom end -->
 </header>
+<!--  Header end -->
