--- a/src/html/_subscribe.html
+++ b/src/html/_subscribe.html
@@ -1,6 +1,8 @@
+<!--  Subscribe start -->
 <div class="subscribe">
     <div class="wrapper">
         <div class="subscribe-inner">
+            <!--  Subscribe form start -->
             <form class="subscribe-form">
                 <div class="subscribe-form__text">
                     УЗНАВАЙТЕ ПЕРВЫМИ НАШИ НОВОСТИ И СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
@@ -14,9 +16,12 @@
                     </button>
                 </div>
             </form>
+            <!--  Subscribe form end -->
+
             <div class="subscribe-info">
                 *Нажимая на кнопку «Подписаться», Вы даете согласие на обработку персональных данных.
             </div>
         </div>
     </div>
 </div>
+<!--  Subscribe end -->
