--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 
 <!-- Main Page -->
 <main>
+    @@include('./html/_categories.html')
     @@include('./html/_advantages.html')
     @@include('./html/_blog.html')
     @@include('./html/_subscribe.html')
