--- a/src/html/_blog.html
+++ b/src/html/_blog.html
@@ -1,34 +1,54 @@
+<!--  Blog start -->
 <div class="blog">
     <div class="wrapper">
         <div class="section-title">
             <h2 class="h2">СТАТЬИ</h2>
             <a href="#" class="section-more">Показать все статьи</a>
         </div>
+        <!--  Blog List start -->
+
         <div class="blog-list">
+            <!--  Blog Item start -->
             <div class="blog-item">
                 <div class="blog-img">
                     <img src="img/blog-1.webp" alt="blog-img">
                 </div>
-                <div class="blog-date">9 Августа, 2022 </div>
+                <div class="blog-date">9 Августа, 2022</div>
                 <div class="blog-title">Как выбрать стул для работы?</div>
-                <div class="blog-desc">О вреде сидячей работы сказано много. Известно, что при сидячем образе жизни резко возрастает риск возникновения сердечно-сосудистых, суставных, эндокринных заболеваний и даже онкологии. Име... </div>
+                <div class="blog-desc">О вреде сидячей работы сказано много. Известно, что при сидячем образе жизни
+                    резко возрастает риск возникновения сердечно-сосудистых, суставных, эндокринных заболеваний и даже
+                    онкологии. Име...
+                </div>
             </div>
+            <!--  Blog Item end -->
+
+            <!--  Blog Item start -->
             <div class="blog-item">
                 <div class="blog-img">
                     <img src="img/blog-2.webp" alt="blog-img">
                 </div>
                 <div class="blog-date">22 Июня, 2022</div>
                 <div class="blog-title">Как выбрать обеденный стол на кухню: основные критерии выбора</div>
-                <div class="blog-desc">Обычно кухня – это центр притяжения всей семьи. Там готовят еду, ужинают, принимают гостей. Интерьер этого</div>
+                <div class="blog-desc">Обычно кухня – это центр притяжения всей семьи. Там готовят еду, ужинают,
+                    принимают гостей. Интерьер этого
+                </div>
             </div>
+            <!--  Blog Item end -->
+
+            <!--  Blog Item start -->
             <div class="blog-item">
                 <div class="blog-img">
                     <img src="img/blog-3.webp" alt="blog-img">
                 </div>
                 <div class="blog-date">22 Июня, 2022</div>
                 <div class="blog-title">Как выбрать стулья для кухни?</div>
-                <div class="blog-desc">Стулья – не ключевой элемент кухни, поэтому их выбирают не слишком тщательно. Но неудачная покупка может</div>
+                <div class="blog-desc">Стулья – не ключевой элемент кухни, поэтому их выбирают не слишком тщательно. Но
+                    неудачная покупка может
+                </div>
             </div>
+            <!--  Blog Item end -->
         </div>
+        <!--  Blog List end -->
     </div>
 </div>
+<!--  Blog end -->
