--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 <!-- Main Page -->
 <main>
     @@include('./html/_categories.html')
+    @@include('./html/_products-1.html')
+    @@include('./html/_products-2.html')
     @@include('./html/_advantages.html')
     @@include('./html/_blog.html')
     @@include('./html/_subscribe.html')
