--- a/src/html/_products-1.html
+++ b/src/html/_products-1.html
@@ -1,5 +1,5 @@
 <!--  Products start -->
-<div class="products">
+<div class="products products-first">
     <div class="wrapper">
         <div class="products-title h2 text-center">САМЫЕ ПОПУЛЯРНЫЕ</div>
         <div class="products-inner">
