--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 
 <!-- Main Page -->
 <main>
+    @@include('./html/_slider.html')
     @@include('./html/_categories.html')
     @@include('./html/_products-1.html')
     @@include('./html/_products-2.html')
