--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     @@include('./html/_products-2.html')
     @@include('./html/_advantages.html')
     @@include('./html/_reviews.html')
+    @@include('./html/_youtubeSlider.html')
     @@include('./html/_blog.html')
     @@include('./html/_subscribe.html')
 </main>
