--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -14,12 +14,12 @@
                     </p>
                     <p class="footer-info-p">К оплате принимаем:</p>
                     <ul class="footer-info__list">
-                        <li class="footer-info__item"><img src="img/payments/visa-footer-logo.svg" alt=""></li>
-                        <li class="footer-info__item"><img src="img/payments/mastercard-footer-logo.svg" alt=""></li>
-                        <li class="footer-info__item"><img src="img/payments/mir-footer-logo.svg" alt=""></li>
-                        <li class="footer-info__item"><img src="img/payments/jcb-footer-logo.svg" alt=""></li>
-                        <li class="footer-info__item"><img src="img/payments/pokupay-footer-logo.webp" alt=""></li>
-                        <li class="footer-info__item"><img src="img/payments/ae-footer-logo.webp" alt=""></li>
+                        <li class="footer-info__item"><img src="img/payments/visa-footer-logo.svg" alt="img"></li>
+                        <li class="footer-info__item"><img src="img/payments/mastercard-footer-logo.svg" alt="img"></li>
+                        <li class="footer-info__item"><img src="img/payments/mir-footer-logo.svg" alt="img"></li>
+                        <li class="footer-info__item"><img src="img/payments/jcb-footer-logo.svg" alt="img"></li>
+                        <li class="footer-info__item"><img src="img/payments/pokupay-footer-logo.webp" alt="img"></li>
+                        <li class="footer-info__item"><img src="img/payments/ae-footer-logo.webp" alt="img"></li>
                     </ul>
                 </li>
                 <li class="footer-top__item">
