--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -52,10 +52,10 @@
     <div class="wrapper">
         <div class="header-inner">
             <a href="#" class="header-logo">
-                <img src="img/logo.webp" alt="">
+                <img src="img/logo.webp" alt="img">
             </a>
             <div class="header-search">
-                <form action="">
+                <form action="#">
                     <input type="search" placeholder="Поиск">
                 </form>
             </div>
@@ -296,7 +296,7 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img class="header-bottom__menu-img"
+                                        <img alt="img" class="header-bottom__menu-img"
                                              src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
                                     </a>
                                 </div>
@@ -336,7 +336,7 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img class="header-bottom__menu-img"
+                                        <img alt="img" class="header-bottom__menu-img"
                                              src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
                                     </a>
                                 </div>
@@ -376,7 +376,7 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img class="header-bottom__menu-img"
+                                        <img alt="img" class="header-bottom__menu-img"
                                              src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
                                     </a>
                                 </div>
@@ -416,7 +416,7 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img class="header-bottom__menu-img"
+                                        <img alt="img" class="header-bottom__menu-img"
                                              src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
                                     </a>
                                 </div>
@@ -456,7 +456,7 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img class="header-bottom__menu-img"
+                                        <img alt="img" class="header-bottom__menu-img"
                                              src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
                                     </a>
                                 </div>
@@ -496,7 +496,7 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img class="header-bottom__menu-img"
+                                        <img alt="img" class="header-bottom__menu-img"
                                              src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
                                     </a>
                                 </div>
@@ -536,7 +536,7 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img class="header-bottom__menu-img"
+                                        <img alt="img" class="header-bottom__menu-img"
                                              src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
                                     </a>
                                 </div>
@@ -576,7 +576,7 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img class="header-bottom__menu-img"
+                                        <img alt="img" class="header-bottom__menu-img"
                                              src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
                                     </a>
                                 </div>
