--- a/src/html/_youtubeSlider.html
+++ b/src/html/_youtubeSlider.html
@@ -7,7 +7,7 @@
             <div class="swiper youtubeSwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-1.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-1.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-2.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-2.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-3.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-3.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-4.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-4.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-1.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-1.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-2.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-2.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-3.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-3.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-4.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-4.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-1.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-1.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-2.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-2.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -239,7 +239,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-3.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-3.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-4.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-4.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -286,7 +286,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-1.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-1.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide youtube-slider__item">
-                        <img class="youtube-slider-slider__img" src="img/youtube-slider-2.jpg" alt="">
+                        <img class="youtube-slider-slider__img" src="img/youtube-slider-2.jpg" alt="IMG">
                         <div class="youtube-slider__content">
                             <div class="youtube-slider__player">
                                 <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
