--- a/src/html/_categories.html
+++ b/src/html/_categories.html
@@ -8,9 +8,7 @@
                 <li class="categories-item categories-item-1">
                     <a href="#" class="categories-link">
                         <span class="categories-link__text">Стулья</span>
-                        <img class="categories-link__img"
-                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/2-400x300.webp"
-                             alt="categories"/>
+                        <img class="categories-link__img" src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/2-400x300.webp" alt="categories">
                     </a>
                 </li>
                 <!--  Categories item end -->
@@ -18,9 +16,7 @@
                 <!--  Categories item start -->
                 <li class="categories-item categories-item-2">
                     <a href="#" class="categories-link">
-                        <img class="categories-link__img"
-                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/4-400x300.webp"
-                             alt="categories"/>
+                        <img class="categories-link__img" src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/4-400x300.webp" alt="categories">
                         <span class="categories-link__text">Кресла</span>
                     </a>
                 </li>
@@ -29,9 +25,7 @@
                 <!--  Categories item start -->
                 <li class="categories-item categories-item-3">
                     <a href="#" class="categories-link">
-                        <img class="categories-link__img"
-                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/6-400x600.webp"
-                             alt="categories"/>
+                        <img class="categories-link__img" src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/6-400x600.webp" alt="categories">
                         <span class="categories-link__text">Барные стулья</span>
                     </a>
                 </li>
@@ -40,9 +34,7 @@
                 <!--  Categories item start -->
                 <li class="categories-item categories-item-4">
                     <a href="#" class="categories-link">
-                        <img class="categories-link__img"
-                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/7-800x300.webp"
-                             alt="categories"/>
+                        <img class="categories-link__img" src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/7-800x300.webp" alt="categories">
                         <span class="categories-link__text">Столы</span>
                     </a>
                 </li>
@@ -51,9 +43,7 @@
                 <!--  Categories item start -->
                 <li class="categories-item categories-item-5">
                     <a href="#" class="categories-link">
-                        <img class="categories-link__img"
-                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/8-400x300.webp"
-                             alt="categories"/>
+                        <img class="categories-link__img" src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/8-400x300.webp" alt="categories">
                         <span class="categories-link__text">Для ресторанов и кафе</span>
                     </a>
                 </li>
@@ -62,9 +52,7 @@
                 <!--  Categories item start -->
                 <li class="categories-item categories-item-6">
                     <a href="#" class="categories-link">
-                        <img class="categories-link__img"
-                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/9-400x300.webp"
-                             alt="categories"/>
+                        <img class="categories-link__img" src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories/9-400x300.webp" alt="categories">
                         <span class="categories-link__text">Акции</span>
                     </a>
                 </li>
