--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -116,7 +116,7 @@
                     </a>
                     <div class="header-actions__item-content  popup-shadow account-popup-shadow">
                         <div class="account">
-                            <div id="wish" class="account__col">
+                            <div id="wish1" class="account__col">
                                 <span class="account__title">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                         <path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/>
@@ -457,7 +457,7 @@
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
                                         <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -497,7 +497,7 @@
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
                                         <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -537,7 +537,7 @@
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
                                         <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -577,7 +577,7 @@
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
                                         <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
