--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -79,7 +79,7 @@
                         Заказать<br> звонок
                     </span>
                     <span class="header-call__button-content popup-shadow ">
-                        <form class="data-callback">
+                        <form action="#" class="data-callback">
                             <h3 class="text-center">Заказать обратный звонок</h3>
                             <input type="text" placeholder="* Ваше имя:" name="name">
                             <input type="text" placeholder="* Ваш телефон:" name="phone" id="callback-telephone">
@@ -135,7 +135,7 @@
                                 </div>
                                 <div class="account__tabs-content">
                                     <div class="account__tabs-content-item active js-tab-content">
-                                        <form action="https://vsestulya.ru/login" enctype="multipart/form-data"
+                                        <form action="#" enctype="multipart/form-data"
                                               id="loginform" method="post">
                                             <div class="account__input-box">
                                                 <input type="text" name="telephone" placeholder="Телефон"
