--- a/src/html/_subscribe.html
+++ b/src/html/_subscribe.html
@@ -3,7 +3,7 @@
     <div class="wrapper">
         <div class="subscribe-inner">
             <!--  Subscribe form start -->
-            <form class="subscribe-form">
+            <form action="#" class="subscribe-form">
                 <div class="subscribe-form__text">
                     УЗНАВАЙТЕ ПЕРВЫМИ НАШИ НОВОСТИ И СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
                 </div>
