--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -78,21 +78,20 @@
                     </svg>
                         Заказать<br> звонок
                     </span>
-                    <span class="header-call__button-content popup-shadow ">
+                    <div class="header-call__button-content popup-shadow ">
                         <form action="#" class="data-callback">
                             <h3 class="text-center">Заказать обратный звонок</h3>
                             <input type="text" placeholder="* Ваше имя:" name="name">
                             <input type="text" placeholder="* Ваш телефон:" name="phone" id="callback-telephone">
                             <textarea rows="5" placeholder="Комментарий: " name="comment"></textarea>
-                             <button
-                                     type="button" class="btn contact-send">Отправить</button>
+                             <button type="button" class="btn contact-send">Отправить</button>
                             <div class="popup-simple__inner-personal-data">Нажимая на кнопку «Отправить», Вы даете
                                 <a href="#" class="agree" title="Политика конфиденциальности">
                                     согласие на обработку персональных данных.
                                 </a>
                             </div>
                         </form>
-                    </span>
+                    </div>
                 </div>
                 <div class="header-call__button">
                     <a href="#" class="header-call__button-inner">
@@ -296,8 +295,8 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
+                                        <img class="header-bottom__menu-img"
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp" alt="img">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -336,8 +335,8 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
+                                        <img  class="header-bottom__menu-img"
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp" alt="img">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -376,8 +375,8 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
+                                        <img class="header-bottom__menu-img"
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp" alt="img">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -416,8 +415,8 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp"/>
+                                        <img class="header-bottom__menu-img"
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp" alt="img">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -456,8 +455,8 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp">
+                                        <img class="header-bottom__menu-img"
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp" alt="img">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -496,8 +495,8 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp">
+                                        <img class="header-bottom__menu-img"
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp" alt="img">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -536,8 +535,8 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp">
+                                        <img class="header-bottom__menu-img"
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp" alt="img">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
@@ -576,8 +575,8 @@
                             <div class="header-bottom__menu-body">
                                 <div class="header-bottom__menu-left">
                                     <a href="#">
-                                        <img alt="img" class="header-bottom__menu-img"
-                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp">
+                                        <img class="header-bottom__menu-img"
+                                             src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/categories-menu/2021-12-21_10-54-57-266x266.webp" alt="img">
                                     </a>
                                 </div>
                                 <div class="header-bottom__menu-right">
