--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -218,6 +218,7 @@
             <div class="header-lang">
                 <select class="select header-lang__select">
                     <option value="RUB" selected="selected"> руб.</option>
+                    <option value="ARM" > arm.</option>
                 </select>
             </div>
         </div>
