--- a/src/html/_products-1.html
+++ b/src/html/_products-1.html
@@ -4,71 +4,86 @@
         <div class="products-title h2 text-center">САМЫЕ ПОПУЛЯРНЫЕ</div>
         <div class="products-inner">
             <!--  Products List start -->
-            <ul class="products-list">
-                <!--  Products Item start -->
-                <li class="products-item">
-                    <div class="products-item__statuses">
-                        <span class="products-item__status success">Популярный</span>
+            <div class="products-list swiper productSwiper">
+                <div class="swiper-wrapper">
+                    <!--  Products Item start -->
+                    <div class="products-item swiper-slide">
+                        <div class="products-item__statuses">
+                            <span class="products-item__status success">Популярный</span>
+                        </div>
+                        <a href="#" class="products-item__img">
+                            <img src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/Mebal_Pokupaj/Stul_Tomi/14-400x400.webp" alt="products">
+                        </a>
+                        <h3 class="products-item__title">
+                            <a href="#">Стул Eames DSW White</a>
+                        </h3>
+                        <p class="products-item__price">Цена:  <span>2090 руб.</span></p>
                     </div>
-                    <a href="#" class="products-item__img">
-                        <img src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/Mebal_Pokupaj/Stul_Tomi/14-400x400.webp" alt="products">
-                    </a>
-                    <h3 class="products-item__title">
-                        <a href="#">Стул Eames DSW White</a>
-                    </h3>
-                    <p class="products-item__price">Цена:  <span>2090 руб.</span></p>
-                </li>
-                <!--  Products Item end -->
+                    <!--  Products Item end -->
 
-                <!--  Products Item start -->
-                <li class="products-item">
-                    <div class="products-item__statuses">
-                        <span class="products-item__status success">Популярный</span>
+                    <!--  Products Item start -->
+                    <div class="products-item swiper-slide">
+                        <div class="products-item__statuses">
+                            <span class="products-item__status success">Популярный</span>
+                        </div>
+                        <a href="#" class="products-item__img">
+                            <img src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/Stulya/~VENSKIE/KOMFORTZHestkoesidene/98-01-2komfort01-400x400.webp" alt="products">
+                        </a>
+                        <h3 class="products-item__title">
+                            <a href="#">СТУЛ ВЕНСКИЙ КОМФОРТ с жестким сиденьем</a>
+                        </h3>
+                        <p class="products-item__price"> Цена:  <span> 4250 руб.</span></p>
                     </div>
-                    <a href="#" class="products-item__img">
-                        <img src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/Stulya/~VENSKIE/KOMFORTZHestkoesidene/98-01-2komfort01-400x400.webp" alt="products">
-                    </a>
-                    <h3 class="products-item__title">
-                        <a href="#">СТУЛ ВЕНСКИЙ КОМФОРТ с жестким сиденьем</a>
-                    </h3>
-                    <p class="products-item__price"> Цена:  <span> 4250 руб.</span></p>
-                </li>
-                <!--  Products Item end -->
+                    <!--  Products Item end -->
 
-                <!--  Products Item start -->
-                <li class="products-item">
-                    <div class="products-item__statuses">
-                        <span class="products-item__status success">Популярный</span>
-                        <span class="products-item__status red">Скидка 24 %</span>
+                    <!--  Products Item start -->
+                    <div class="products-item swiper-slide">
+                        <div class="products-item__statuses">
+                            <span class="products-item__status success">Популярный</span>
+                            <span class="products-item__status red">Скидка 24 %</span>
+                        </div>
+                        <a href="#" class="products-item__img">
+                            <img src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/Stulya/A-18/3_1-4frontcopy-1000x1000-400x400.webp" alt="products">
+                        </a>
+                        <h3 class="products-item__title">
+                            <a href="#">Стул Венский А-18 орех</a>
+                        </h3>
+                        <p class="products-item__price"> Цена:  <span> 10269 руб.</span></p>
                     </div>
-                    <a href="#" class="products-item__img">
-                        <img src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/Stulya/A-18/3_1-4frontcopy-1000x1000-400x400.webp" alt="products">
-                    </a>
-                    <h3 class="products-item__title">
-                        <a href="#">Стул Венский А-18 орех</a>
-                    </h3>
-                    <p class="products-item__price"> Цена:  <span> 10269 руб.</span></p>
-                </li>
-                <!--  Products Item end -->
+                    <!--  Products Item end -->
 
-                <!--  Products Item start -->
-                <li class="products-item">
-                    <div class="products-item__statuses">
-                        <span class="products-item__status red">Скидка 24 %</span>
-                        <span class="products-item__status success">Популярный</span>
+                    <!--  Products Item start -->
+                    <div class="products-item swiper-slide">
+                        <div class="products-item__statuses">
+                            <span class="products-item__status red">Скидка 24 %</span>
+                            <span class="products-item__status success">Популярный</span>
+                        </div>
+                        <a href="#" class="products-item__img">
+                            <img src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/vendors/123/DSC_5242-400x400.webp" alt="products">
+                        </a>
+                        <h3 class="products-item__title">
+                            <a href="#">Cтул Венский Uranus из массива бука, светлый орех</a>
+                        </h3>
+                        <p class="products-item__price"> Цена:  <span>7800 руб.</span>
+                            <!--                        <span class="old-price">10200 руб.</span>-->
+                        </p>
                     </div>
-                    <a href="#" class="products-item__img">
-                        <img src="https://vsestulya.ru/image/cache/catalog/image/cache/catalog/vendors/123/DSC_5242-400x400.webp" alt="products">
-                    </a>
-                    <h3 class="products-item__title">
-                        <a href="#">Cтул Венский Uranus из массива бука, светлый орех</a>
-                    </h3>
-                    <p class="products-item__price"> Цена:  <span>7800 руб.</span>
-<!--                        <span class="old-price">10200 руб.</span>-->
-                    </p>
-                </li>
-                <!--  Products Item end -->
-            </ul>
+                    <!--  Products Item end -->
+                </div>
+                <div class="swiper-buttons">
+                    <div class="swiper-button swiper-button-prev">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16 4L8 12L16 20" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <div class="swiper-button swiper-button-next">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8 4L16 12L8 20" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+
+            </div>
             <!--  Products List end -->
         </div>
     </div>
