--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -4,7 +4,7 @@
         <!--  Footer top start -->
         <div class="footer-top">
             <ul class="footer-top__list">
-                <li class="footer-top__item">
+                <li class="footer-top__item footer-top__item-1">
                     <a href="#" class="footer-logo">
                         <span>ВСЕ СТУЛЬЯ.РУ</span>
                         <img src="img/logo_footer.webp" alt="logo">
@@ -23,7 +23,9 @@
                     </ul>
                 </li>
                 <li class="footer-top__item">
-                    <div class="footer-top__title">ИНФОРМАЦИЯ</div>
+                    <div class="footer-top__title">ИНФОРМАЦИЯ <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                    </span></div>
                     <div class="footer-top__menu">
                         <a href="#" class="footer-top__menu-link">О компании</a>
                         <a href="#" class="footer-top__menu-link">Шоу Румы</a>
@@ -35,8 +37,10 @@
                     </div>
                 </li>
                 <li class="footer-top__item">
-                    <div class="footer-top__title">КАТАЛОГ</div>
-                    <div class="footer-top__menu">
+                    <div class="footer-top__title active">КАТАЛОГ <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+                    </span></div>
+                    <div class="footer-top__menu" style="display:block;">
                         <a href="#" class="footer-top__menu-link">Стулья</a>
                         <a href="#" class="footer-top__menu-link">Столы</a>
                         <a href="#" class="footer-top__menu-link">Кресла</a>
@@ -59,6 +63,7 @@
                     <a href="#" class="footer-yandex-market">
                         <img src="img/yandmarket1.webp" alt="yandmarket1.webp">
                     </a>
+                    <div class="footer-socials-title">Мы в социальных сетях:</div>
                     <div class="footer-socials">
                         <a href="#" class="footer-social">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -103,6 +108,30 @@
     </svg>
 </button>
 
+<div class="modal modal-bag modal-call" id="modal-call">
+    <div class="modal__container modal-bag__container modal-call__container">
+        <div class="cart-popup__top">
+            <span class="cart-popup__title js-cart-title">
+                <span class="js-cart-items">Заказать обратный звонок</span>
+            </span>
+        </div>
+        <div class="cart-popup_bottom js-cart-bottom">
+            <div class="header-call__button-content">
+                <form action="#" class="data-callback">
+                    <input type="text" placeholder="* Ваше имя:" name="name">
+                    <input type="text" placeholder="* Ваш телефон:" name="phone" id="callback-telephone">
+                    <textarea rows="5" placeholder="Комментарий: " name="comment"></textarea>
+                    <button type="button" class="btn contact-send">Отправить</button>
+                    <div class="popup-simple__inner-personal-data">Нажимая на кнопку «Отправить», Вы даете
+                        <a href="#" class="agree" title="Политика конфиденциальности">
+                            согласие на обработку персональных данных.
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="modal modal-bag" id="modal-bag">
     <div class="modal__container modal-bag__container">
         <div class="cart-popup__top">
@@ -119,6 +148,108 @@
             <div class="scroll-container">
                 <span class="cart-popup__discount">Ваша корзина пуста!</span>
             </div>
+        </div>
+    </div>
+</div>
+<div class="modal modal-bag modal-call modal-category" id="modal-category" style="display:block;">
+    <div class="modal__container modal-bag__container modal-call__container modal-category__container">
+        <div class="header-phones">
+            <a href="#" class="header-phone">8 490 500 38 80</a>
+            <a href="#" class="header-phone">8-800-555-95-91</a>
+        </div>
+        <div class="cart-popup__top">
+            <span class="cart-popup__title js-cart-title">
+                <span class="js-cart-items">Категории</span>
+            </span>
+            <span class="close cart-popup__close js-cart-close">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                  <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+            </span>
+        </div>
+        <div class="cart-popup_bottom js-cart-bottom">
+            <div class="scroll-container">
+<!--                <span class="cart-popup__discount">Ваша корзина пуста!</span>-->
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal modal-bag modal-auth" id="modal-auth">
+    <div class="modal__container modal-bag__container modal-auth__container">
+        <div class="cart-popup__top">
+            <span class="close cart-popup__close js-cart-close">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                  <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+            </span>
+            <span class="cart-popup__title js-cart-title text-center">
+                <span class="js-cart-items">Авторизация</span>
+            </span>
+        </div>
+        <div class="cart-popup_bottom js-cart-bottom">
+
+            <div class="account__col right js-tabs-box">
+                <div class="account__tabs">
+                    <span class="account__tabs-item active js-tab">Вход</span>
+                    <span class="account__tabs-item js-tab">Регистрация</span>
+                </div>
+                <div class="account__tabs-content">
+                    <div class="account__tabs-content-item active js-tab-content">
+                        <form action="#" enctype="multipart/form-data"
+                              id="loginform" method="post">
+                            <div class="account__input-box">
+                                <input type="text" name="telephone" placeholder="Телефон"
+                                       id="input-telephone">
+                            </div>
+                            <div class="account__input-box account__input-box--pass">
+                                <input type="password" id="header-input-password" placeholder="Пароль"
+                                       name="password">
+                                <a href="#" class="password-control"></a>
+                            </div>
+                            <div class="account__input-box account__input-box--forgotten">
+                                <a href="#">Забыли пароль?</a>
+                            </div>
+
+                            <button class="btn" form="loginform" type="submit">Войти</button>
+                        </form>
+                    </div>
+                    <div class="account__tabs-content-item js-tab-content" style="display: none;">
+                        <div class="account__register-box ">
+                            Создание учетной записи поможет делать следующие покупки быстрее (не
+                            надо будет снова вводить адрес и контактную информацию), видеть
+                            состояние заказа, а также видеть заказы, сделанные ранее. Вы также
+                            сможете накапливать при покупках призовые баллы (на них тоже можно
+                            что-то купить), а постоянным покупателям мы предлагаем систему скидок.
+                        </div>
+                        <a class="btn" href="#">Регистрация</a>
+                    </div>
+                </div>
+            </div>
+            <div   class="account__col">
+                                <span class="account__title">Валюта
+                                </span>
+                <span class="">
+                                    <div class="header-lang">
+                    <select class="select header-lang__select">
+                        <option value="RUB" selected="selected"> руб.</option>
+                        <option value="ARM" > arm.</option>
+                    </select>
+                </div>
+                                </span>
+            </div>
+            <div  class="account__col">
+                                <span class="account__title">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                        <path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/>
+                                    </svg>
+                                    Избранное (0)
+                                </span>
+                <span class="account__empty-text">
+                                    <span>У вас в избранном ничего нет.</span>
+                                </span>
+            </div>
+
+
         </div>
     </div>
 </div>
@@ -157,6 +288,27 @@
                 </div>
                 <div class="prmn-cmngr-cities__search-item">
                     <span class="prmn-cmngr-cities__city-name" data-id="86">Санкт-Петербург</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal modal-city modal-search" id="modal-search">
+    <div class="modal__container modal-city__container">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+                <span>×</span>
+            </button>
+            <h4 class="modal-title">Поиск</h4>
+        </div>
+        <div class="modal-body">
+            <div class="prmn-cmngr-cities__search-block form-inline">
+                <div class="form-group">
+                    <input class="prmn-cmngr-cities__search form-control" type="text"
+                           placeholder="Поиск" autocomplete="off">
+                    <button>
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
+                    </button>
                 </div>
             </div>
         </div>
