--- a/src/html/_slider.html
+++ b/src/html/_slider.html
@@ -6,7 +6,8 @@
             <div class="swiper homeSwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide home-slider__item">
-                        <img class="home-slider__img" src="img/home-slider.jpg" alt="img">
+                        <img class="home-slider__img home-slider__img-desktop" src="img/home-slider.jpg" alt="img">
+                        <img class="home-slider__img home-slider__img-mobile" src="img/home-slider__mobile.jpg" alt="img">
                         <div class="home-slider__content">
                             <h3 class="home-slider__title">НОВОГОДНИЕ СУПЕРЦЕНЫ</h3>
                             <p class="home-slider__desc">6-31 декабря</p>
@@ -14,7 +15,8 @@
                         </div>
                     </div>
                     <div class="swiper-slide home-slider__item">
-                        <img class="home-slider__img" src="img/home-slider.jpg" alt="img">
+                        <img class="home-slider__img home-slider__img-desktop" src="img/home-slider.jpg" alt="img">
+                        <img class="home-slider__img home-slider__img-mobile" src="img/home-slider__mobile.jpg" alt="img">
                         <div class="home-slider__content">
                             <h3 class="home-slider__title">НОВОГОДНИЕ СУПЕРЦЕНЫ</h3>
                             <p class="home-slider__desc">6-31 декабря</p>
@@ -22,7 +24,8 @@
                         </div>
                     </div>
                     <div class="swiper-slide home-slider__item">
-                        <img class="home-slider__img" src="img/home-slider.jpg" alt="img">
+                        <img class="home-slider__img home-slider__img-desktop" src="img/home-slider.jpg" alt="img">
+                        <img class="home-slider__img home-slider__img-mobile" src="img/home-slider__mobile.jpg" alt="img">
                         <div class="home-slider__content">
                             <h3 class="home-slider__title">НОВОГОДНИЕ СУПЕРЦЕНЫ</h3>
                             <p class="home-slider__desc">6-31 декабря</p>
