--- a/src/html/_subscribe.html
+++ b/src/html/_subscribe.html
@@ -4,12 +4,16 @@
         <div class="subscribe-inner">
             <!--  Subscribe form start -->
             <form action="#" class="subscribe-form">
-                <div class="subscribe-form__text">
+                <div class="subscribe-form__text subscribe-form__text-desktop">
                     УЗНАВАЙТЕ ПЕРВЫМИ НАШИ НОВОСТИ И СПЕЦИАЛЬНЫЕ ПРЕДЛОЖЕНИЯ
+                </div>
+                <div class="subscribe-form__text subscribe-form__text-mobile">
+                    Подпишитесь на нашу рассылку
                 </div>
                 <div class="subscribe-form__input">
                     <input type="email" placeholder="ЭЛ. ПОЧТА">
                     <button>
+                        <span class="subscribe-form__button subscribe-form__button-mobile">подписаться</span>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                             <path d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8s16.1 25.8 31.4 25.8H224V432c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"/>
                         </svg>
