add mobile category

--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -622,7 +622,7 @@
     <div class="wrapper">
         <div class="header-mobile__inner">
             <div class="header-mobile__left">
-                <div class="header-mobile__burger">
+                <div class="header-mobile__burger  open__modal" data-modal="#modal-category">
                     <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16 4.49998V2.09998H0V4.49998H16ZM16 9.29998V6.89998H0V9.29998H16ZM16 14.1V11.7H0V14.1H16Z" fill="#EA6E34"/>
                     </svg>
